<resources>
    <string name="app_name">14D-Diary</string>


    <!--    menu    -->
    <string name="nav_home">หน้าหลัก</string>
    <string name="nav_chat">สนทนา</string>
    <string name="nav_diary">บันทึกประจำวัน</string>
    <string name="nav_profile">โปรไฟล์</string>
    <string name="nav_news">ติดตามสถานการณ์</string>

    <!--    home    -->
    <string name="home_subtitle">คุณรู้สึกไม่สบายหรือเปล่า?</string>
    <string name="home_detail">หากคุณรู้สึกไม่สบาย มีอาการเข้าข่าย\nโรค COVID-19 โปรดโทรขอความช่วยเหลือ</string>
    <string name="home_emergency_call">โทรด่วน</string>

    <!--    chat    -->
    <string-array name="tab_chat">
        <item>รายชื่อ</item>
        <item>ประวัติการสนทนา</item>
    </string-array>

    <!--    news    -->
    <string-array name="tab_news">
        <item>ประเทศไทย</item>
        <item>ทั่วโลก</item>
    </string-array>
    <string name="news_update_time">อัพเดทล่าสุด: </string>
    <string name="news_inflect">ติดเชื้อสะสม</string>
    <string name="news_treating">กำลังรักษาสะสม</string>
    <string name="news_recover">รักษาหายแล้วสะสม</string>
    <string name="news_death">ผู้เสียชีวิตสะสม</string>
    <string name="news_new_inflect">ติดเชื้อใหม่วันนี้</string>
    <string name="news_new_death">ผู้เสียชีวิตวันนี้</string>
    <string name="news_new_recover">รักษาหายแล้ววันนี้</string>

    <!--    diary   -->
    <string-array name="tab_diary">
        <item>ภาระกิจ 14 วัน</item>
        <item>บันทึกของคุณ</item>
    </string-array>

    <string name="diary_save">บันทึก</string>
    <string name="diary_delete">ลบ</string>

    <!--    register    -->
    <string name="text_email">email@kmutt.ac.th</string>
    <string name="text_password">รหัสผ่าน</string>
    <string name="text_register">ลงทะเบียน</string>
    <string name="text_user_name">ชื่อ</string>
    <string name="text_user_last_name">นามสกุล</string>
    <string name="text_display_name">ชื่อที่แสดง</string>

    <!--    sign in  -->
    <string name="text_sign_in">ลงชื่อเข้าใช้</string>

    <!--    profile -->
    <string name="text_sign_out">ออกจากระบบ</string>
</resources>
