<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/bg_emergency">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/home_subtitle"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/home_detail"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/emergency_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/btn_red"
        android:drawableStart="@drawable/ic_call_white_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/home_emergency_call"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>