<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/regis_pic"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_human"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_display_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/app_name"
            android:hint="@string/text_display_name"
            android:inputType="text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regis_pic"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/text_user_name"
            android:hint="@string/text_user_name"
            android:inputType="text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/user_last_name"
            app:layout_constraintStart_toStartOf="@id/user_display_name"
            app:layout_constraintTop_toBottomOf="@id/user_display_name"
            app:layout_constraintWidth_percent="0.4" />

        <EditText
            android:id="@+id/user_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/text_user_last_name"
            android:hint="@string/text_user_last_name"
            android:inputType="text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@id/user_display_name"
            app:layout_constraintStart_toEndOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_display_name"
            app:layout_constraintWidth_percent="0.4" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/text_email"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/text_password"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/register_submit"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_green"
            android:text="@string/text_register"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>