<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ac.th.kmutt.math.the14d_diary.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_chat"
            app:destination="@id/nav_chat" />
        <action
            android:id="@+id/action_nav_home_to_nav_news"
            app:destination="@id/nav_news" />
        <action
            android:id="@+id/action_nav_home_to_nav_diary"
            app:destination="@id/nav_diary" />
    </fragment>
    <fragment
        android:id="@+id/nav_chat"
        android:name="ac.th.kmutt.math.the14d_diary.ui.chatHome.ChatHomeFragment"
        android:label="@string/nav_chat"
        tools:layout="@layout/fragment_chat_home" >
        <action
            android:id="@+id/action_nav_chat_to_chatRoom"
            app:destination="@id/chatRoom" />
    </fragment>
    <fragment
        android:id="@+id/nav_news"
        android:name="ac.th.kmutt.math.the14d_diary.ui.news.NewsFragment"
        android:label="@string/nav_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/chatRoom"
        android:name="ac.th.kmutt.math.the14d_diary.ui.individualChat.ChatRoomFragment"
        android:label="fragment_chat_room"
        tools:layout="@layout/fragment_chat_room" />
    <fragment
        android:id="@+id/nav_diary"
        android:name="ac.th.kmutt.math.the14d_diary.ui.diaryList.DiaryListFragment"
        android:label="fragment_diary_list"
        tools:layout="@layout/fragment_diary_list" >
        <action
            android:id="@+id/action_nav_diary_to_diaryFragment"
            app:destination="@id/diaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/diaryFragment"
        android:name="ac.th.kmutt.math.the14d_diary.ui.diary.DiaryFragment"
        android:label="fragment_diary"
        tools:layout="@layout/fragment_diary" />
</navigation>