<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.news.thaiNews.ThaiNewsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/news_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/news_update_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/news_update_time"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/news_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/news_update_time_label"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/news_new_inflect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/news_update_time_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.95"
            android:padding="20dp"
            android:background="@drawable/bg_inflect"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_new_inflect"
                android:textSize="25sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/news_new_inflect_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/news_new_recover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_recover"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/news_new_inflect"
            app:layout_constraintStart_toStartOf="@id/news_new_inflect"
            app:layout_constraintEnd_toStartOf="@id/news_new_death"
            app:layout_constraintWidth_percent="0.45">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_new_recover"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/news_new_recover_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/news_new_death"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_death"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/news_new_inflect"
            app:layout_constraintStart_toEndOf="@id/news_new_recover"
            app:layout_constraintEnd_toEndOf="@id/news_new_inflect"
            app:layout_constraintWidth_percent="0.45">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_new_death"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/news_new_death_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/news_all_inflect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/news_new_death"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.95"
            android:padding="20dp"
            android:background="@drawable/bg_inflect"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_inflect"
                android:textSize="25sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/news_inflect_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/news_recover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_recover"
            app:layout_constraintTop_toBottomOf="@id/news_all_inflect"
            app:layout_constraintStart_toStartOf="@id/news_all_inflect"
            app:layout_constraintEnd_toStartOf="@id/news_death"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            app:layout_constraintWidth_percent="0.45">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_recover"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/news_recover_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/news_death"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_death"
            app:layout_constraintTop_toBottomOf="@id/news_all_inflect"
            app:layout_constraintStart_toEndOf="@id/news_recover"
            app:layout_constraintEnd_toEndOf="@id/news_all_inflect"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            app:layout_constraintWidth_percent="0.45">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_death"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/news_death_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/news_rcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/news_recover"
            android:layout_marginTop="15dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>