<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.diary.DiaryFragment">

    <include
        android:id="@+id/app_bar_header"
        layout="@layout/layout_appbar"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <FrameLayout
                android:id="@+id/diary_bg_header"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/bg_diary"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/diary_picture"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher"
                android:background="@drawable/border_picture"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/diary_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/app_name"
                android:textSize="30sp"
                android:textColor="@android:color/black"
                android:inputType="text"
                android:autofillHints=":)"
                app:layout_constraintTop_toBottomOf="@id/diary_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.8"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/diary_detail"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textSize="18sp"
                android:inputType="text"
                android:hint="@string/home_detail"
                android:lineSpacingMultiplier="1.5"
                app:layout_constraintTop_toBottomOf="@id/diary_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.8"
                android:layout_marginTop="15dp"
                android:autofillHints=":)"
                android:gravity="top"/>

            <Button
                android:id="@+id/take_picture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_camera"
                android:padding="2dp"
                app:layout_constraintBottom_toBottomOf="@id/diary_picture"
                app:layout_constraintEnd_toEndOf="@id/diary_picture" />

            <Button
                android:id="@+id/diary_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_yellow"
                android:text="@string/diary_save"
                android:textSize="20sp"
                style="?android:borderlessButtonStyle"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/diary_detail"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/diary_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_red"
                android:text="@string/diary_delete"
                android:textSize="20sp"
                style="?android:borderlessButtonStyle"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/diary_detail"
                app:layout_constraintEnd_toStartOf="@id/diary_submit"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>